--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
                   </div>
                   <div class="clearfix"></div>
                   <div data-swiper-parallax="500" class="slide-btns">
-                    <button type="button" class="btn btn-primary btn-lg">
+                    <button type="button" class="btn btn-primary btn-lg shiny-button">
                         <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
                     </button>
                   </div>
@@ -76,7 +76,7 @@
                   </div>
                   <div class="clearfix"></div>
                   <div data-swiper-parallax="500" class="slide-btns">
-                    <button type="button" class="btn btn-primary btn-lg">
+                    <button type="button" class="btn btn-primary btn-lg shiny-button">
                         <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
                     </button>
                   </div>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <button type="button" class="btn btn-primary btn-lg">
+                        <button type="button" class="btn btn-primary btn-lg shiny-button">
                             <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
                         </button>
                     </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <button type="button" class="btn btn-primary btn-lg">
+                        <button type="button" class="btn btn-primary btn-lg shiny-button">
                             <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
                         </button>
                     </div>
@@ -494,7 +494,7 @@
             <div class="row_space"></div>
             <div class="row">
                 <div class="col">
-                    <button type="button" class="btn btn-primary btn-lg">
+                    <button type="button" class="btn btn-primary btn-lg shiny-button">
                         <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
                     </button>
                 </div>
@@ -506,16 +506,16 @@
                         <div class="row">
                           <div class="col-xs12">
                             <div id="tab" class="btn-group btn-group-justified" data-toggle="buttons">
-                              <a href="#licenseManagement" class="btn btn-default active" data-toggle="tab">
+                              <a href="#licenseManagement" class="btn btn-default active skills-name" data-toggle="tab">
                                 <input type="radio" />ONETIK License <br>Management
                               </a>
-                              <a href="#environmentInventory" class="btn btn-default" data-toggle="tab">
+                              <a href="#environmentInventory" class="btn btn-default skills-name" data-toggle="tab">
                                 <input type="radio" />ONETIK Environment <br>Inventory
                               </a>
-                              <a href="#tenantMigrator" class="btn btn-default" data-toggle="tab">
+                              <a href="#tenantMigrator" class="btn btn-default skills-name" data-toggle="tab">
                                 <input type="radio" />ONETIK Tenant<br> Migrator
                               </a>
-                              <a href="#assetManagement" class="btn btn-default" data-toggle="tab">
+                              <a href="#assetManagement" class="btn btn-default skills-name" data-toggle="tab">
                                 <input type="radio" />ONETIK Asset <br> Management
                               </a>
                             </div>
@@ -981,28 +981,28 @@ visit the office
             <div class="row_space_in"></div>
             <div class="row form ">
                 <div class="col">
-                    <div class="row">
+                    <div class="row contact-input">
                         <label for="name">Name</label>
                         <input type="text" placeholder="">
                     </div>
 
-                    <div class="row">
+                    <div class="row contact-input">
                         <label for="surname">Surname</label>
                         <input type="text" placeholder="">
                     </div>
 
-                    <div class="row">
+                    <div class="row contact-input">
                         <label for="name">Email</label>
                         <input type="email" placeholder="">
                     </div>
 
-                    <div class="row">
+                    <div class="row contact-input">
                         <label for="message">Message</label>
                 
                         <textarea rows="4" cols="50" name="comment" form="usrform" placeholder=""></textarea>
                     </div>
 
-                    <div class="row"><button>submit</button></div>
+                    <div class="row contact-button"><button>submit</button></div>
                     
                 </div>
             </div>
