--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,56 @@
 
   --header-text-color:#174887;
   --side_text_color: #000;
+
+}
+.shiny-button{
+  width: fit-content;
+  position: relative;
+
+  border: 3px solid transparent;
+
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  background-size: 100%, 200%;
+  background-position: 0px, -250px;
+  animation: 4s border-glint linear backwards infinite;
+  animation-delay: 1s;
+  box-shadow: rgba(0,0,0,0.6) 8px 8px 8px;
+  text-shadow: 0px 0px 4px rgba(255,255,255,0.1);
+  transition: box-shadow 0.25s, text-shaddw 0.25s;
+  overflow: hidden;
+}
+.shiny-button:hover{
+  cursor: pointer;
+  background-image: linear-gradient(to bottom right, rgb(24, 77, 177), rgb(24, 77, 177)), linear-gradient(125deg, rgba(255,255,255,0) 45%, rgba(255,255,255,0.6) 50%, rgba(255,255,255,0) 53%);
+  color: rgb(250, 250, 255);
+  box-shadow: rgba(0,0,0,0.7) 5px 5px 5px;
+  text-shadow: 0px 0px 3px rgba(255,255,255,0.7);
+  transition: box-shadow 0.25s, text-shaddw 0.25s;
+}
+.shiny-button::after {
+  content: ' ';
+  position: absolute;
+  top: -50%;
+  left: -120%;
+  width: 200%;
+  height: 200%;
+  background-image: linear-gradient(125deg, rgba(255,255,255,0) 30%, rgba(255,255,255,0.4) 50%, rgba(255,255,255,0) 52%);
+  animation: 4s glint linear backwards infinite;
+  animation-delay: -3s;
+}
+@keyframes glint {
+  0% { left: -120%; }
+  8% { left: 50%; }
+  100% { left: 50%; }
+}
+
+
+@keyframes border-glint {
+  0% { background-position: 0px, -250px; }
+  25% { background-position: 0px, -200px; }
+  75% { background-position: 0px, 50px; }
+  100% { background-position: 0px, 50px; }
 }
 section{
   padding-top: 170px;
@@ -245,6 +295,7 @@ body {
 .card_size_b{
   height: 490px;
 }
+
 .backgrouns-white{
   background-color: var(--white);
 }
@@ -256,10 +307,10 @@ body {
 .card img {
   transition: .4s;
   
-}
+} 
 .card img:hover{
   transform: scale(1.1);
-}
+}  
 #products .dark-card img{
   width: 164px;
   display: block;
