--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>OKTik</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" type="image/x-icon" href="../photos/OKTikLogo 3.png">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,7 +19,7 @@
 
 <header>
     <div class="header-container">
-        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.svg" alt="OKTik" style="float:left;width: 300px;";></a>
+        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.svg" alt="OKTik" style="float:left;"></a>
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
         </button>
@@ -309,7 +310,7 @@
                 <div class="col-9">
                     <div class="row">
                         <div class="col">
-                            <div class="card card_size_b" >
+                            <div class="card card_size_c" >
                                 <div class="card-img"><img src="../photos/rec11.png" class="card-img-top icon" alt="..."></div>
                                 <div class="card-body">
                                   <p class="card-text">MNC, Large enterprises 
@@ -318,7 +319,7 @@
                               </div>
                         </div>
                         <div class="col">
-                            <div class="card card_size_b" >
+                            <div class="card card_size_c" >
                                 <div class="card-img"><img src="../photos/rec112.png" class="card-img-top icon" alt="..."></div>
                                 <div class="card-body">
                                   <p class="card-text">Finance or IT leasing 
@@ -329,7 +330,7 @@
                               </div>
                         </div>
                         <div class="col">
-                            <div class="card card_size_b">
+                            <div class="card card_size_c">
                                 <div class="card-img"><img src="../photos/rec12.png" class="card-img-top icon" alt="..."></div>
                                 <div class="card-body">
                                   <p class="card-text">Corporations in M&A activities, 
@@ -340,7 +341,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="card card_size_b">
+                            <div class="card card_size_c">
                                 <div class="card-img"><img src="../photos/rec13.png" class="card-img-top icon" alt="..."></div>
                                 <div class="card-body">
                                   <p class="card-text">Enterprises planning for 
@@ -350,7 +351,7 @@
                               </div>
                         </div>
                         <div class="col">
-                            <div class="card card_size_b">
+                            <div class="card card_size_c">
                                 <div class="card-img"><img src="../photos/rec14.png" class="card-img-top icon" alt="..."></div>
                                 <div class="card-body">
                                   <p class="card-text">Enterprises who need to get an accurate view of license utilisation to justify their M365 investment.</p>
@@ -358,7 +359,7 @@
                               </div>
                         </div>
                         <div class="col">
-                            <div class="card card_size_b">
+                            <div class="card card_size_c">
                                 <div class="card-img">
                                     <img src="../photos/rec15.png" class="card-img-top icon" alt="...">
                                 </div>
@@ -506,7 +507,7 @@
                         <div class="row">
                           <div class="col-xs12">
                             <div id="tab" class="btn-group btn-group-justified" data-toggle="buttons">
-                              <a href="#licenseManagement" class="btn btn-default active skills-name" data-toggle="tab">
+                              <a href="#licenseManagement" class="btn btn-default skills-name" data-toggle="tab">
                                 <input type="radio" />ONETIK License <br>Management
                               </a>
                               <a href="#environmentInventory" class="btn btn-default skills-name" data-toggle="tab">
@@ -515,13 +516,13 @@
                               <a href="#tenantMigrator" class="btn btn-default skills-name" data-toggle="tab">
                                 <input type="radio" />ONETIK Tenant<br> Migrator
                               </a>
-                              <a href="#assetManagement" class="btn btn-default skills-name" data-toggle="tab">
+                              <a href="#assetManagement" class="btn btn-default skills-name active" data-toggle="tab">
                                 <input type="radio" />ONETIK Asset <br> Management
                               </a>
                             </div>
                             <div class="row_space"></div>
                             <div class="tab-content">
-                              <div class="tab-pane active" id="licenseManagement">
+                              <div class="tab-pane " id="licenseManagement">
                                 <h1 class="text-uppercase">OneTik License Management</h1>
                                 <div class="row_space_in"></div>
                                 <p>
@@ -596,7 +597,7 @@ visit the office
                                     </ul>
                                    
                               </div>
-                              <div class="tab-pane" id="assetManagement">
+                              <div class="tab-pane active" id="assetManagement">
                                 
                                 <h1 class="text-uppercase">ONETIK Asset Management</h1>
                                 <div class="row_space_in"></div>
@@ -624,7 +625,7 @@ visit the office
                         </div>
                       </div>
                 </div>
-                <div class="col-3 side_text_style" style="padding: 90px 0px;">
+                <div class="col-3 side_text_style" style="padding-top: 90px;">
                     <div class="row">
                         <div class="col">
                             <ul>
@@ -727,6 +728,7 @@ visit the office
                         <h1>User experience</h1>
                     </div>
                 </div>
+                <div class="row_space_in"></div>
                 <div class="row">
                     <div class="col icons_">
                         <p>OKTIK professional service and software is user-centric by design. 
@@ -799,7 +801,7 @@ visit the office
                                 <div class="row_space"></div>
                                 <h3 class="text-uppercase">if only they’d used</h3>
                                 <div class="row_space"></div>
-                                <img src="../photos/OKTik Logo white.png" alt="OKTik">
+                                <img class="white_logo" src="../photos/OKTik Logo white.png" alt="OKTik">
                                 <img class="desktop" src="../photos/Desktop.png" alt="OKTik">
                             </div> 
                         </div>
@@ -807,7 +809,7 @@ visit the office
                     
                     
                 </div>
-                <div class="col-2 side_text_style">
+                <div class="col-2 side_text_style d_side_">
                     <div class="row">
                         <div class="col">
                             <ul>
@@ -828,7 +830,7 @@ visit the office
                     <div class="row">
                         <div class="col">
                             <ul>
-                                <li>ISV Success /li>
+                                <li>ISV Success </li>
                                 <li>Programme</li>
                             </ul>
                         </div>
@@ -913,10 +915,10 @@ visit the office
     <section id="study" class="study section">
         <div class="container">
             <div class="row">
-                <div class="col-7 subheading text-uppercase">
+                <div class="col-7 subheading text-uppercase next_cola">
                     <h1>Customer case study</h1>
                 </div>
-                <div class="col-5"><img src="../photos/logo/cocacola logo.png" alt="COCA-COLA"></div>
+                <div class="col-5"><img class="COCA-COLA" src="../photos/logo/cocacola logo.png" alt="COCA-COLA"></div>
             </div>
             <div class="row_space_in"></div>
             <div class="row ">
@@ -927,41 +929,37 @@ visit the office
                     <p>OKTIK and CCEP worked together using ONETIK to deliver an extensive migration of legacy workplace – devices, apps and users – to a single M365 digital workplace environment. All remotely and at scale, with user migration volumes of at least several hundred per day.</p>
                     <p>OKTIK was able to automate the whole process of discovery, preparation, migration and overall project management to hit CCEP’s goals. Remote delivery through Azure ensured connectivity to all the global businesses. Cloud-based services, device management, OS, security and user access were all migrated in one go using a single click automated method to minimise change for the user. Powerful real-time dashboards empowered management control, engineering decisions and exemplary user support without impact to the business.</p>
                 </div>
-                <div class="col-3 side_text_style">
+                <div class="col-3 side_text_style set_">
                     <div class="row">
                         <div class="col">
                             <ul>
-                                <li>Orchestration </li>
-                               
+                                <li>53bn merger </li>
+                                <li>30 000 users </li>
+                                <li>7 countries </li>
                             </ul>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <ul>
-                                <li>Automation </li>
-                               
+                                <li>We identified savings  </li>
+                                <li>for CCEP of approx. </li>
+                                <li>$500,000 per year </li>
                             </ul>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <ul>
-                                <li>>200,000 clients </li>
-                                <li>using ONETIK</li>
-                                <li>Automation Software</li>
+                                <li>“To deliver complex change, you need to work effectively with third parties; OKTIK truly integrated with us, creating a one team spirit focused on solutions.”
+                                    <br><br>
+                                    Neil Charlton, <br>
+                                    <span class="font-change"><em>Director of Technology Solution Delivery,</em> </span>Coca-Cola EuroPacific Partners
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <ul>
-                                <li>20+ years’ experience in large  </li>
-                                <li>scale complex enterprise </li>
-                                <li>transformations</li>
-                            </ul>
-                        </div>
-                    </div>
+                    
                     
 
                 </div>
